Theme color and overflow fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,9 @@ time, mark, audio, video {
   vertical-align: baseline; }
 
 body {
-  line-height: 1; }
+  line-height: 1; 
+  overflow-x: hidden;
+}
 
 ol, ul {
   list-style: none; }
